--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Titanium - Clinic Website Template</title>
+        <title>CareFusion365</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -78,7 +78,7 @@
             <a href="index.html"
                class="navbar-brand d-flex align-items-center px-4 px-lg-5">
                 <h1 class="m-0 text-primary">
-                    <i class="far fa-hospital me-3"></i>Titanium
+                    <i class="far fa-hospital me-3"></i>CareFusion365
                 </h1>
             </a>
             <button type="button"
