--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
             </div>
             <div class="ms-4">
               <p class="mb-2">Mail Us For More Info</p>
-              <h5 class="mb-0">titaniumhealth3@gmail.com</h5>
+              <h5 class="mb-0">carefusion365@gmail.com</h5>
             </div>
           </div>
         </div>
@@ -544,7 +544,7 @@
                             </div>
                             <div class="ms-4">
                                 <p class="mb-2">Mail Us For More Info</p>
-                                <h5 class="mb-0">titaniumhealth3@gmail.com</h5>
+                                <h5 class="mb-0">carefusion365@gmail.com</h5>
                             </div>
                         </div>
                     </div>
@@ -595,7 +595,7 @@
       </div>
       <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
         <div class="testimonial-item text-center">
-          <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;">
+          <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;" alt="">
           <div class="testimonial-text rounded text-center p-4">
             <p>
               Carefusion365 is the best thing that has happened to me. I can now easily share my EMR with any
@@ -606,7 +606,7 @@
           </div>
         </div>
         <div class="testimonial-item text-center">
-          <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;">
+          <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;" alt="">
           <div class="testimonial-text rounded text-center p-4">
             <p>
               I love this service. I am able to easily understand what doctors usually dont explain to me!
@@ -616,7 +616,7 @@
           </div>
         </div>
         <div class="testimonial-item text-center">
-          <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;">
+          <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;" alt="">
           <div class="testimonial-text rounded text-center p-4">
             <p>
               Carefusion365 is really the future!
