--- a/pages/organization/add-organization.html
+++ b/pages/organization/add-organization.html
@@ -131,20 +131,34 @@
             <form class="add-org-form border" id="add-organization-form">
                 <h5>Organization Details</h5>
                 <div class="mb-1">
-                    <label class="add-org-label">Name of organization <span>(*)</span> :</label>
+                    <label class="add-org-label">Name of Organization <span>(*)</span> :</label>
                     <input class="add-org-input" id="organization-name"/>
                 </div>
 
+                <div class="mb-1">
+                    <label class="add-org-label">Organization Email <span>(*)</span> :</label>
+                    <input class="add-org-input" id="organization-email"/>
+                </div>
+
+                <div class="mb-1">
+                    <label class="add-org-label">Alias <span>(*)</span> :</label>
+                    <input class="add-org-input" id="organization-alias"/>
+                </div>
+
+                <div class="mb-1">
+                    <label class="add-org-label">Organization Website <span>(*)</span> :</label>
+                    <input class="add-org-input" id="organization-website"/>
+                </div>
 
 
                 <div class="two-grid">
                     <div class="mb-1">
-                        <label class="add-org-label">Address <span>(*)</span> :</label>
+                        <label class="add-org-label">Organization Address <span>(*)</span> :</label>
                         <input class="add-org-input" id="address"/>
                     </div>
 
                     <div class="mb-1">
-                        <label class="add-org-label">Contact:</label>
+                        <label class="add-org-label">Organization Contact:</label>
                         <input class="add-org-input" id="contact"/>
                     </div>
                 </div>
@@ -247,6 +261,7 @@
     <script src="../../lib/tempusdominus/js/moment.min.js"></script>
     <script src="../../lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="../../lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <!-- Add Toastr JavaScript library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
