CAR-136 re-working organization request body structure

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!--Added CTA for organization-->
         <div class="cta-container">
           <a href="./pages/admin-auth/admin-auth-register.html" class="cta-button">
-            Add your organization
+            Sign up with us
           </a>
         </div>
       </div>
@@ -350,6 +350,13 @@
                   </div>
                 </div>
               </div>
+            </div>
+
+            <!--Added CTA for organization-->
+            <div class="cta-container">
+              <a href="./pages/admin-auth/admin-auth-register.html" class="cta-button">
+                Register with us
+              </a>
             </div>
           </div>
         </div>
