--- a/pages/organization/add-organization.html
+++ b/pages/organization/add-organization.html
@@ -80,7 +80,7 @@
      <a href="index.html"
         class="navbar-brand d-flex align-items-center px-4 px-lg-5">
          <h1 class="m-0 text-primary">
-             <i class="far fa-hospital me-3"></i>Titanium
+             <i class="far fa-hospital me-3"></i>CareFusion365
          </h1>
      </a>
      <button type="button"
@@ -136,24 +136,19 @@
                 </div>
 
                 <div class="mb-1">
-                    <label class="add-org-label">Organization Email <span>(*)</span> :</label>
+                    <label class="add-org-label">Organization Email <span></span> :</label>
                     <input class="add-org-input" id="organization-email"/>
                 </div>
 
                 <div class="mb-1">
-                    <label class="add-org-label">Alias <span>(*)</span> :</label>
-                    <input class="add-org-input" id="organization-alias"/>
-                </div>
-
-                <div class="mb-1">
-                    <label class="add-org-label">Organization Website <span>(*)</span> :</label>
+                    <label class="add-org-label">Organization Website <span></span> :</label>
                     <input class="add-org-input" id="organization-website"/>
                 </div>
 
 
                 <div class="two-grid">
                     <div class="mb-1">
-                        <label class="add-org-label">Organization Address <span>(*)</span> :</label>
+                        <label class="add-org-label">Organization Address <span></span> :</label>
                         <input class="add-org-input" id="address"/>
                     </div>
 
